# osm-router

./: .gitignore  .travis.yml  CMakeLists.txt  DESCRIPTION  NAMESPACE  README.md  bikes.cfg  profile.cfg  tmux-start.bash
R/: RcppExports.R  get-route-density.R
data/: routing_points_london.txt
data/weighting_profiles/: profile_bicycle.cfg  profile_foot.cfg  profile_goods.cfg  profile_horse.cfg  profile_moped.cfg  profile_wheelchair.cfg
extract_profiles/: Makefile  extract.c++  routino-profiles.xml
man/: osm-router-package.Rd
src/: Graph-test.c++  Graph-test.h  Graph.c++  Graph.cpp  Graph.h  RcppExports.cpp  Router-test.c++  Router-test.cpp  Router-test.h  Router.c++  Router.cpp  Router.h  StationData.c++  StationData.h  Utils.c++  Utils.h  stochastic-sp.c++  stochastic-sp.cpp  stochastic-sp.h  stochastic-test.c++  stochastic-test.cpp  stochastic-test.h  xml-parser.c++  xml-parser.cpp  xml-parser.h  xml-test.c++  xml-test.h
